welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:43: error: not found: value reucle
  	reucle()
        ^